# ProtoLens

./: LICENSE  README.md  run.sh
PLS/: .gitignore  Cargo.toml  README.md  appsettings.json
PLS/src/: client_handler.rs  command.rs  gdb_proxy.rs  main.rs  options.rs  transaction.rs  virtual_prototype.rs
PLW/: README.md  index.html  package-lock.json  package.json
PLW/src/: App.vue  main.ts  types.ts
PLW/src/components/misc/: Configuration.vue  ControlBar.vue  SnackBar.vue
PLW/src/components/tvm/: Architecture.vue  Framebuffer.vue  Terminal.vue  TransactionLog.vue
PLW/src/lib/: transaction_parser.ts  worker.ts
PLW/src/lib/tvm/: architecture.ts  configuration.ts
